--- a/src/CheeseMVC/Views/Category/Add.cshtml
+++ b/src/CheeseMVC/Views/Category/Add.cshtml
@@ -1,24 +1,24 @@
-﻿@model CheeseMVC.ViewModels.AddCheeseViewModel
+@model CheeseMVC.ViewModels.AddCategoryViewModel
 
 <h1>Add Cheese</h1>
 
-<form asp-controller="Cheese" asp-action="Add" method="post">
+<form asp-controller="Category" asp-action="Add" method="post">
 
     <div class="form-group">
         <label asp-for="Name"></label>
         <input class="form-control" asp-for="Name" />
         <span asp-validation-for="Name"></span>
     </div>
-    <div class="form-group">
+    <!-- <div class="form-group">
         <label asp-for="Description"></label>
         <input class="form-control" asp-for="Description" />
         <span asp-validation-for="Description"></span>
-    </div>
-
-    <div class="form-group">
-        <label asp-for="CategoryID"></label>
-        <select asp-for="CategoryID" asp-items="Model.Categories"></select>
-    </div>
+    </div> -->
+    <!-- TODO: Finish this section -->
+    <!-- <div class="form-group">
+        <label asp-for="Type"></label>
+        <select asp-for="Type" asp-items="Model.CheeseTypes"></select>
+    </div> -->
 
     <input type="submit" value="Add Cheese" />
 
